[前端修复] 修复控制台输出异常等问题